[workspace]
members = [
    "cadency_core",
    "cadency_codegen",
    "cadency_commands",
    "cadency_yt_playlist",
    "cadency",
    "examples/*"
]
resolver = "2"

[workspace.dependencies]
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.58"
serde_json = "1.0.115"
derive_builder = "0.20.0"

[workspace.dependencies.serenity]
version = "0.12.1"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "voice", "cache"]

[workspace.dependencies.songbird]
version = "0.4.1"
features = ["builtin-queue"]

[workspace.dependencies.tokio]
version = "1.37.0"
features = ["macros", "rt-multi-thread"]

[workspace.dependencies.serde]
version = "1.0.197"
features = ["derive"]

[workspace.dependencies.reqwest]
version = "0.11.27"
default-features = false
features = ["rustls-tls", "json"]

[workspace.dependencies.symphonia]
version = "0.5.4"
features = ["all-formats"]
