[workspace]
members = [
    "cadency_core",
    "cadency_codegen",
    "cadency_commands",
    "cadency_yt_playlist",
    "cadency",
    "examples/*"
]
resolver = "2"

[workspace.dependencies]
env_logger = "0.11.5"
log = "0.4.22"
thiserror = "1.0.63"
serde_json = "1.0.128"
derive_builder = "0.20.1"

[workspace.dependencies.serenity]
version = "0.12.2"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "voice", "cache"]

[workspace.dependencies.songbird]
version = "0.4.3"
features = ["builtin-queue"]

[workspace.dependencies.tokio]
version = "1.40.0"
features = ["macros", "rt-multi-thread"]

[workspace.dependencies.serde]
version = "1.0.210"
features = ["derive"]

[workspace.dependencies.reqwest]
version = "0.11.27"
default-features = false
features = ["rustls-tls", "json"]

[workspace.dependencies.symphonia]
version = "0.5.4"
features = ["all-formats"]
