[package]
name = "cadency"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.14"

[dependencies.cadency_core]
path = "../cadency_core"

[dependencies.cadency_commands]
path = "../cadency_commands"

[dependencies.tokio]
version = "1.13.0"
features = ["macros", "rt-multi-thread"]
