[package]
name = "cadency"
version = "0.4.1"
edition = "2021"
description = "An extensible discord bot with support with music commands"
license = "MIT"
repository = "https://github.com/jontze/cadency-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[dependencies.cadency_core]
path = "../cadency_core"
version = "0.4.1"

[dependencies.cadency_commands]
path = "../cadency_commands"
version = "0.4.1"
