[package]
name = "cadency_codegen"
version = "0.6.10"
edition = "2021"
description = "Library with codegen macros for the cadency discord bot"
license = "MIT"
repository = "https://github.com/jontze/cadency-rs"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"
