[package]
name = "cadency_commands"
version = "0.5.1"
edition = "2021"
description = "Library with a collection of some commands for the cadency discord bot"
license = "MIT"
repository = "https://github.com/jontze/cadency-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
serenity = { workspace = true }
songbird = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
rand = "0.8.5"

[dependencies.cadency_core]
path = "../cadency_core"
version = "0.5.1"

[dependencies.cadency_codegen]
path = "../cadency_codegen"
version = "0.5.1"

[dependencies.cadency_yt_playlist]
path = "../cadency_yt_playlist"
version = "0.5.1"
