[package]
name = "cadency_core"
version = "0.3.0"
edition = "2021"
description = "Library with the core logic for the cadency discord bot"
license = "MIT"
repository = "https://github.com/jontze/cadency-rs"

[dependencies]
log = "0.4.17"
reqwest = "0.11.14"
thiserror = "1.0.38"
mockall_double = "0.3.0"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "voice", "cache"]

[dependencies.songbird]
version = "0.3.0"
features = ["builtin-queue", "yt-dlp"]

[dev-dependencies]
mockall = "0.11.3"

[dev-dependencies.tokio]
version = "1.25.0"
features = ["macros", "rt-multi-thread"]
