[package]
name = "cadency_core"
version = "0.6.6"
edition = "2021"
description = "Library with the core logic for the cadency discord bot"
license = "MIT"
repository = "https://github.com/jontze/cadency-rs"

[dependencies]
log = { workspace = true }
serenity = { workspace = true }
songbird = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
symphonia = { workspace = true }
