[package]
name = "cadency_yt_playlist"
version = "0.3.0"
edition = "2021"
description = "Library of the cadency discord bot to interact with youtube playlists"
license = "MIT"
repository = "https://github.com/jontze/cadency-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
thiserror = "1.0.35"

[dependencies.serde]
version = "1.0.144"
features = ["derive"]
