[package]
name = "cadency_yt_playlist"
version = "0.4.2"
edition = "2021"
description = "Library of the cadency discord bot to interact with youtube playlists"
license = "MIT"
repository = "https://github.com/jontze/cadency-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

