[package]
name = "custom_commands"
version = "0.5.1"
edition = "2021"
description = "An example how to integrate custom commands into cadency_rs"
license = "MIT"
repository = "https://github.com/jontze/cadency-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "custom_commands"

[dependencies]
serenity = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[dependencies.cadency_core]
path = "../../cadency_core"
version = "0.5.1"

[dependencies.cadency_codegen]
path = "../../cadency_codegen"
version = "0.5.1"

[dependencies.cadency_commands]
path = "../../cadency_commands"
version = "0.5.1"
